# Nexus-OS

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NEXUS_OS_Current_State.md  NEXUS_OS_Current_State.md.agent_v2_backup.gap-G033-libnexus-docs  NEXUS_VISION.md  README.md  SECURITY.md  build.sh  install.sh  nexus-cli  requirements.txt  setup.py
.git-hooks/: pre-commit
agents/: .gitignore  INVITE_INSTRUCTIONS.md  agent_registry.py  agent_workflow.py  autonomous_loop.py  blockchain_logger.py  change_analyzer.py  dev_assistant.py  feature_collector.py  finetune_extractor.py  gateway_config.yaml  gateway_protocol.py  health_monitor.py  hierarchy_manager.py  invite_bots.py  invite_links.html  knowledge_indexer.py  knowledge_planner.py  llm_client.py  llm_router_v2.py  metrics.py  nexus-client-agent.service  nexus_cli.py  nexus_gateway.py  node_agent.py  queue_commands.py  request_queue.py  safety_config.py  safety_gates.py  task_decomposer.py  task_logger.py  task_queue.py  task_queue.yaml.bak  test_blockchain_logger.py  test_delegation.py  test_hierarchy_v2.py  test_integration.py  test_phase3_batch2.py  test_phase4_change_analyzer.py  test_phase4_knowledge_planner.py  (+5 more)
automation/: build_world_model.py  chroma_memory.py  context_builder.py  discord_reporter.py  (+18 more)
collector/: Cargo.toml
collector/src/: compound.rs  events.rs  input_source.rs  main.rs  submitter.rs  system_source.rs  x11_source.rs
collector/src/channels/: audio.rs  clipboard.rs  file.rs  framebuffer.rs  gps.rs  keystroke.rs  mod.rs  mouse.rs  notification.rs  peripheral.rs  session.rs  weather.rs  web.rs  window.rs
(+826 files in other folders)
